bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: not found: value message
  message match{
  ^